// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box component sanity matches default snapshot 1`] = `
.c0 {
  box-sizing: border-box;
}

<div
  class="c0"
/>
`;

exports[`Box component sanity matches themed snapshot 1`] = `
.c1 {
  box-sizing: border-box;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
</div>
`;
